@@ -1,0 +1,18 @@
+# Generated by Django 4.2.13 on 2024-06-12 13:54
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('zinnia', '0005_category_mptt_update'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='entry',
+            name='related',
+            field=models.ManyToManyField(blank=True, to='zinnia.entry', verbose_name='related entries'),
+        ),
+    ]
