@@ -1,6 +1,7 @@
 0.23.0+dismine.1, 12st June 2024:
 ------------------------------
 * Compatibility fix for Django 5.0.
+* Added missing migration that was not added in the upstream.
 
 0.22.0+dismine.3 - 2022/12/30
 -------------------
